--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Vijay Krishna Palepu
 ---
 
-
+<div class="center">
 		<h4>Research & Academics &rsaquo;&rsaquo;</h4>
 			<p>I am currently a PhD student in the Software Engineering program, at the Department of Informatics, University of California, Irvine. I hold a degree in B.E. in Computers from the University of Pune, India.</p> 
 			<p>As a student of Software Engineering Research, I am interested in building and studying reusable models of the runtime behavior of software components that can be leveraged for a number of software development, maintenance, and testing tasks.</p>
