--- a/news.html
+++ b/news.html
@@ -3,8 +3,7 @@ layout: default
 title: News - Vijay Krishna Palepu
 ---
 
-<div class="center">
-<h4>News &rsaquo;&rsaquo;</h4>
+<div class="plain stretch">
   <ul class="posts">
     {% for post in site.categories.news %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
