--- a/projects.html
+++ b/projects.html
@@ -3,21 +3,14 @@ layout: default
 title: Projects - Vijay Krishna Palepu
 ---
 
-{% for post in site.categories.project %}
-<div class='center'>
-	{% if forloop.first == true %}
-		<h4>Projects &rsaquo;&rsaquo;</h4>
-	{% endif %}
-	<div class="timePd" style="margin-bottom:6px;font-size:12px">{{ post.from }} to {{ post.to }}</div>
-	<a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-	<span class="shortDesc">- {{ post.one-liner }}</span>
-	<div>
-		{% for tag in post.tags %}
-			<span class="tags">{{ tag }}</span>
-			{% if forloop.last != true %}
-				<span> </span>
-			{% endif %}
-		{% endfor %}
-	</div>
-</div>
-{% endfor %}
+
+{% include project_group.html heading="@research" group=site.categories.research-project %}
+
+{% include project_group.html heading="@graduate coursework" group=site.categories.class-project %}
+
+{% include project_group.html heading="@undergrad" group=site.categories.undergrad %}
+
+{% include project_group.html heading="hacks" group=site.categories.hack %}
+
+{% include project_group.html heading="all projects" group=site.categories.project %}
+
