Permlink not working for pubs.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@ title: Vijay Krishna Palepu
 ---
 
 <div class="plain stretch">
-	<!--width:22.5 # Vijay Krishna.JPG-->
 	<img style="float: left; width:25%; min-width:100px; margin: 10px; -moz-border-radius: 10px; border-radius: 10px;" src="{{ site.url }}/images/vpalepu.jpg" alt="Vijay Krishna" />
 	<p>I am a Ph.D. Candidate in Software Engineering, at the Department of Informatics, University of California, Irvine. I graduated, my undergrad Bachelor of Engineering (B.E.) program, with a <i>First Class with Distinction</i> in Computer Engineering from the University of Pune, India.</p>
 
 	<p>As a student of Software Engineering Research, I am interested in building, visualizing and studying reusable models of the runtime behavior of software components that can be leveraged for a number of software development, maintenance, and testing tasks. My current focus, however, is to facilitate software debugging which is a complex and ubiquitous activity within software engineering.</p>
-	<p>My advisor is <a href="http://www.ics.uci.edu/~jajones/Home.html" target="_blank">Prof. James A. Jones</a> at the <a href="http://www.spideruci.org">Spider Lab</a>. James' research is focused towards software testing, analysis (compile-time and run-time) and debugging. <!-- I also work with <a href="http://www.ics.uci.edu/~guoqingx/index.html">Prof. Harry Xu</a>. Harry's research interests include static and dynamic program analyses for compiler optimization and software engineering tasks. --></p>
+	<p>My advisor is <a href="http://www.ics.uci.edu/~jajones/Home.html" target="_blank">Prof. James A. Jones</a> at the <a href="http://www.spideruci.org">Spider Lab</a>. James' research is focused towards software testing, analysis (compile-time and run-time) and debugging.</p>
 	<small>
 		<a href="https://bitbucket.com/vpalepu" target="_blank">@<b>bitbucket</b>.com</a> &bull;
 		<a href="http://www.linkedin.com/in/palepuvijaykrishna" target="_blank">@Linked<b>in</b></a> &bull;
@@ -18,7 +17,6 @@ title: Vijay Krishna Palepu
 		<a href="http://stackoverflow.com/users/1481262/vijay">@stack<b>overflow</b></a> &bull;
 		<a href="https://gist.github.com/VijayKrishna">@<b>gist</b>.github.com</a>
 		<br>
-		<!-- Background Photo Credit: <a href="http://sudhapalepu.wordpress.com/" target="_blank">Sudha Palepu</a> -->
 		Background Photo: <a href="{{ site.url }}/images/mt-rainier.JPG" target="_blank">Mt. Ranier</a>, © Vijay Krishna Palepu, 2015
 	</small>
 </div>
@@ -52,7 +50,6 @@ title: Vijay Krishna Palepu
 
 	<iframe style="float: right; margin: 10px;" src="//player.vimeo.com/video/69526834?color=c9ff23" width="500" height="472" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	Cerebro, formerly known as "The Brain", reveals clusters of source code that co-execute to produce behavioral features of the program throughout and within executions. We created a clustered visualization of source-code that is informed by dynamic control flow of multiple executions; each cluster represents commonly interacting logic that composes software features. In addition, we render individual executions atop the clustered multiple-execution visualization as user-controlled animations to reveal characteristics of specific executions—these animations may provide exemplars for the clustered features and provide chronology for those behavioral features, or they may reveal anomalous behaviors that do not fit with the overall operational profile of most executions. Both the clustered multiple-execution view and the animated individual-execution view provide insights for the constituent behaviors within executions that compose behaviors of whole executions. Inspired by neural imaging of human brains of people who were subjected to various external stimuli, we designed and implemented Cerebro to reveal program activity during execution. The result has revealed the principal behaviors of execution. Those behaviors were revealed to be (in some cases) cohesive, modular source-code structures and (in other cases) cross-cutting, emergent behaviors involving multiple modules.
-	<!-- <p><a href="http://vimeo.com/69526834">The Brain Visualization of Program Execution</a> from <a href="http://vimeo.com/spideruci">Spider Lab at UC Irvine</a> on <a href="https://vimeo.com">Vimeo</a>.</p> -->
 </div>
 
 {% include publications.html large_title=true %}
@@ -60,6 +57,3 @@ title: Vijay Krishna Palepu
 {% include teaching.html large_title=true %}
 
 {% include talks.html large_title=true count = 4 %}
-<!-- <div class="plain stretch">  
-	<a href="{{ site.url }}/se-student-meet-uci.html" target="_blank">Software Engineering Student Meetings, UCI</a>
-</div> -->
