--- a/tree.html
+++ b/tree.html
@@ -1,24 +1,25 @@
 ---
+title: Treestrokes
+layout: tree
 ---
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
 <link rel="shortcut icon" href="favicon.gif" />
 <title>TreeStrokes</title>
 </head>
-<body>
+<body> -->
 <div id="heading">
 </div>
 <div id="main" style="min-width:700px;">
-		<!--Start of Left-->
-		 <div id="left" style="float:left">					
-		 			<div>
-		 					 <img style="height: 750px; width: 750px;" src="{{ site.url }}/images/favicon.gif" alt="treestrokes" />
-					</div>
+	<div class='plain stretch'>					
+		<div>
+			<img style="height: 750px; width: 750px;" src="{{ site.url }}/images/favicon.gif" alt="treestrokes" />
 		</div>
+	</div>
 </div>			
 
 
-</body>
-</html>
+<!-- </body>
+</html> -->
