Notice: Work in progress.

--- a/index.html
+++ b/index.html
@@ -5,22 +5,16 @@ title: Vijay Krishna Palepu
 
 <div class="plain stretch">
 	<img style="float: left; width:25%; min-width:100px; margin: 10px; -moz-border-radius: 10px; border-radius: 10px;" src="{{ site.url }}/images/vpalepu.jpg" alt="Vijay Krishna" />
-	<p>I am a Ph.D. Candidate in Software Engineering, at the Department of Informatics, University of California, Irvine. I graduated, my undergrad Bachelor of Engineering (B.E.) program, with a <i>First Class with Distinction</i> in Computer Engineering from the University of Pune, India.</p>
+	<p><b>NOTE: Since graduating from UCI, this website is terribly out of date, and I am in the process of rebuilding this website. Visit back later for updates. -- Vijay, May 7 2018</b></p>
 
-	<p>As a student of Software Engineering Research, I am interested in building, visualizing and studying reusable models of the runtime behavior of software components that can be leveraged for a number of software development, maintenance, and testing tasks. My current focus, however, is to facilitate software debugging which is a complex and ubiquitous activity within software engineering.</p>
-	<p>My advisor is <a href="http://www.ics.uci.edu/~jajones/Home.html" target="_blank">Prof. James A. Jones</a> at the <a href="http://www.spideruci.org">Spider Lab</a>. James' research is focused towards software testing, analysis (compile-time and run-time) and debugging.</p>
-	<small>
-		<a href="https://bitbucket.com/vpalepu" target="_blank">@<b>bitbucket</b>.com</a> &bull;
-		<a href="http://www.linkedin.com/in/palepuvijaykrishna" target="_blank">@Linked<b>in</b></a> &bull;
-		<a href="http://instagram.com/vpalepu" target="_blank">@Instagram</a> &bull;
-	  <a href="https://medium.com/@vkrishnapalepu" target="_blank">@medium</a> &bull;
-		<a href="http://stackoverflow.com/users/1481262/vijay">@stack<b>overflow</b></a> &bull;
-		<a href="https://gist.github.com/VijayKrishna">@<b>gist</b>.github.com</a>
-		<br>
-		Background Photo: <a href="{{ site.url }}/images/mt-rainier.JPG" target="_blank">Mt. Ranier</a>, © Vijay Krishna Palepu, 2015
-	</small>
+	<p>As a software engineer, I am principally interested in improving the methods and techniques for software debugging (i.e. finding and fixing software faults). I am particularly interested in developing the facilities and theory to enable software developers better understand, locate and fix software faults. My research currently looks at building, visualizing and studying models of runtime behavior of software components in order to facilitate software debugging which is a complex and ubiquitous activity within software engineering.</p>
+
+	<p>I graduated with a Ph.D. in Software Engineering, from the University of California, Irvine, where I was advised by <a href="http://www.ics.uci.edu/~jajones/Home.html" target="_blank">Prof. James A. Jones</a> at the <a href="http://www.spideruci.org">Spider Lab</a>. James' research is focused towards software testing, analysis (compile-time and run-time) and debugging. Before UCI, I obtained my undergrad degree in Computer Engineering, with a <i>First Class with Distinction</i> from the University of Pune, India.</p>
+<!-- 	
+	<p>My advisor is <a href="http://www.ics.uci.edu/~jajones/Home.html" target="_blank">Prof. James A. Jones</a> at the <a href="http://www.spideruci.org">Spider Lab</a>. James' research is focused towards software testing, analysis (compile-time and run-time) and debugging.</p> -->
 </div>
-{% if site.categories.highlight.size != 0 %}
+
+<!-- {% if site.categories.highlight.size != 0 %}
 <div class="plain stretch">
 	<strong class="big">Latest</strong>
 	<hr class="thinblue" />
@@ -40,7 +34,7 @@ title: Vijay Krishna Palepu
   	</ul>
 </div>
 
-{% endif %}
+{% endif %} -->
 
 <div class="plain stretch">
 	<strong class="big">CEREBRO</strong>
