--- a/research.html
+++ b/research.html
@@ -5,8 +5,8 @@ title: Research - Vijay Krishna Palepu
 
 <div class='plain stretch'>
 	<strong class="big">Summary</strong><br>
-	<p>As a software engineer, I am principally interested in improving the methods and techniques for software debugging (i.e. finding and fixing software faults). I am particularly interested in  developing the facilities and theory to enable software developers better understand, locate and fix software faults. My research currently looks at building, visualizing and studying models of runtime behavior of software components in order to facilitate software debugging which is a complex and ubiquitous activity within software engineering.</p>
-	<p>Models for studying runtime behavior of software often suffer from information overload given that even moderately sized software programs, which typically range from 10–100KLOC, often encompass millions of runtime actions that need to be accounted for. My work looks at solutions that facilitate analysis and comprehension of software executions in ways that combat information overload by (a) abstracting or summarizing program behavior and (b) globally visualizing program executions.</p>
+	<p>I am interested in building, visualizing and studying reusable models of the runtime behavior of software components that can be leveraged for a number of software development, maintenance, and testing tasks. My current focus, specifically, is to facilitate software debugging which is a complex and ubiquitous activity within software engineering.</p>
+	<p>My doctoral research looked at models for studying runtime behavior of software that often suffer from information overload given that even moderately sized software programs, which typically range from 10–100KLOC, often encompass millions of runtime actions that need to be accounted for. My work looks at solutions that facilitate analysis and comprehension of software executions in ways that combat information overload by (a) abstracting or summarizing program behavior and (b) globally visualizing program executions.</p>
 	<p>Following are brief descriptions of the projects I have worked on.</p>
 </div>
 
