Cleaning up the Header; Archiving stuff.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@ title: Vijay Krishna Palepu
 ---
 
 <div class="plain stretch">
+	<p><b>NOTE: Since graduating from UCI, I have let this website go terribly out of date. I am in the process of rebuilding this website. Visit back later for updates. -- Vijay, May 17 2018</b></p>
+</div>
+
+<div class="plain stretch">
 	<img style="float: left; width:25%; min-width:100px; margin: 10px; -moz-border-radius: 10px; border-radius: 10px;" src="{{ site.url }}/images/vpalepu.jpg" alt="Vijay Krishna" />
-	<p><b>NOTE: Since graduating from UCI, this website is terribly out of date, and I am in the process of rebuilding this website. Visit back later for updates. -- Vijay, May 7 2018</b></p>
+
 
 	<p>As a software engineer, I am principally interested in improving the methods and techniques for software debugging (i.e. finding and fixing software faults). I am particularly interested in developing the facilities and theory to enable software developers better understand, locate and fix software faults. My research currently looks at building, visualizing and studying models of runtime behavior of software components in order to facilitate software debugging which is a complex and ubiquitous activity within software engineering.</p>
 
@@ -46,8 +50,24 @@ title: Vijay Krishna Palepu
 	Cerebro, formerly known as "The Brain", reveals clusters of source code that co-execute to produce behavioral features of the program throughout and within executions. We created a clustered visualization of source-code that is informed by dynamic control flow of multiple executions; each cluster represents commonly interacting logic that composes software features. In addition, we render individual executions atop the clustered multiple-execution visualization as user-controlled animations to reveal characteristics of specific executions—these animations may provide exemplars for the clustered features and provide chronology for those behavioral features, or they may reveal anomalous behaviors that do not fit with the overall operational profile of most executions. Both the clustered multiple-execution view and the animated individual-execution view provide insights for the constituent behaviors within executions that compose behaviors of whole executions. Inspired by neural imaging of human brains of people who were subjected to various external stimuli, we designed and implemented Cerebro to reveal program activity during execution. The result has revealed the principal behaviors of execution. Those behaviors were revealed to be (in some cases) cohesive, modular source-code structures and (in other cases) cross-cutting, emergent behaviors involving multiple modules.
 </div>
 
-{% include publications.html large_title=true %}
+<div class="plain stretch">
+	<strong class="big">Today We Lack</strong>
+	<hr class="thinblue" />
 
-{% include teaching.html large_title=true %}
+	<strong>Hosted at:</strong> <a href="http://treestrokes.github.io/today-we-lack/">http://treestrokes.github.io/today-we-lack/</a><br>
 
-{% include talks.html large_title=true count = 4 %}
+
+	"Today We Lack" is an attempt to harness the power of the internet and the data that it has accumulated over the years to understand what we as a people in India have been lacking for many years now, as reported by our news media. The premise of this project is simple: list out all the things that we lack in the country --- today, yesterday, the day before, or at any time in the past --- and someone, somewhere might want to do something about it.<br>
+
+	We are collecting news headlines from websites such as the Times of India. From such a massive pool of headlines we are simply searching for those headlines that have the word 'lack' in it. We find that such headlines explicitly call out on things that we as a people lack, every now and then.<br>
+
+	Take a look at this list of things that India lacks.
+</div>
+
+
+
+<!-- {% include publications.html large_title=true %} -->
+
+<!-- {% include teaching.html large_title=true %} -->
+
+<!-- {% include talks.html large_title=true count = 4 %} -->
