--- a/research.html
+++ b/research.html
@@ -24,3 +24,7 @@ title: Research - Vijay Krishna Palepu
 	{% include citation.html post = post %}
 </div>
 {% endfor %}
+
+<div class="plain stretch">
+	I also make it a habbit to archive some of my older projects and work when possible. Here is a collection of some of my other random projects that I have worked on over the years: <a href="{{ site.url }}/projects.html">Projects</a>
+</div>
