--- a/cv.html
+++ b/cv.html
@@ -3,6 +3,17 @@ layout: default
 title: CV - Vijay Krishna Palepu
 ---
 
+<div class="plain stretch">
+	<img style="float: left; width:25%; min-width:100px; margin: 10px; -moz-border-radius: 10px; border-radius: 10px;" src="{{ site.url }}/images/vpalepu.jpg" alt="Vijay Krishna" />
+
+
+	<p>As a software engineer, I am principally interested in improving the methods and techniques for software debugging (i.e. finding and fixing software faults). I am particularly interested in developing the facilities and theory to enable software developers better understand, locate and fix software faults. My research currently looks at building, visualizing and studying models of runtime behavior of software components in order to facilitate software debugging which is a complex and ubiquitous activity within software engineering.</p>
+
+	<p>I graduated with a Ph.D. in Software Engineering, from the University of California, Irvine, where I was advised by <a href="http://www.ics.uci.edu/~jajones/Home.html" target="_blank">Prof. James A. Jones</a> at the <a href="http://www.spideruci.org">Spider Lab</a>. James' research is focused towards software testing, analysis (compile-time and run-time) and debugging. Before UCI, I obtained my undergrad degree in Computer Engineering, with a <i>First Class with Distinction</i> from the University of Pune, India.</p>
+<!-- 	
+	<p>My advisor is <a href="http://www.ics.uci.edu/~jajones/Home.html" target="_blank">Prof. James A. Jones</a> at the <a href="http://www.spideruci.org">Spider Lab</a>. James' research is focused towards software testing, analysis (compile-time and run-time) and debugging.</p> -->
+</div>
+
 {% include education.html %}
 
 {% include experience.html %}
