--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@ layout: default
 title: Vijay Krishna Palepu
 ---
 
-<div style="height: 90%"></div>
-<div style="margin-bottom:40px; background-color: rgba(255, 255, 255, 0.5); height: 3em">
-	
-
+<div style="height: 88%"></div>
+<div style="margin-bottom:30px; background-color: rgba(255, 255, 255, 0.95); text-align: left;">
 	<span class="regular_x3_5">
 		Vijay Krishna <b>Palepu</b>
 	</span>
